--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<html>
+  <head>
+    <title>Git and GIThub</title>
+  </head>
+  <body>
+    <h4>Simple Registeration form for an event and exploring git and github commands, Practicing source code management on github</h4>
+  </body>
+</html>
