--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Git and GIThub</title>
   </head>
   <body>
-    <h4>Simple Registeration form for an event and exploring git and github commands, Practicing source code management on github</h4>
+    <h4>Simple Registeration form for an event and exploring git and github commands, Practicing source code management on github, anyway i made the first changes in vsc</h4>
   </body>
 </html>
